# BaseDevice

./: CMakeLists.txt  CMakePresets.json  CMakePresets.json_bak  README.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
myomod_interface/: CMakeLists.txt  comInterface.cpp  comInterface.h  commonRegisters.h  i2c.cpp  i2c.h
ozone_projects/: BaseDeviceCore0.jdebug
source/: CMakeLists.txt  SampleSink.cpp  display.cpp  specificRegisters.h
